USAGOV-726-Dir-Edits: Use flex-shrink:0; to prevent label from wrapping
Applying grid-col-4 causes the label to become VERY wide at tablet screen sizes. This technique keeps the label the width of its text. I also removed <p> tags around the <ul> since <ul> cannot go inside of <p> elements.

--- a/web/themes/custom/usagov/sass/_fed-directory.scss
+++ b/web/themes/custom/usagov/sass/_fed-directory.scss
@@ -162,6 +162,7 @@ hr.bl-divider {
 
     p:first-child {
       font-weight: bold;
+      flex-shrink: 0;
     }
   }
 }
